force-app/code/objects/Routing_Condition__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable a single condition without deleting. Inactive conditions are excluded from the WHERE clause.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>