force-app/code/objects/Routing_Condition__mdt/fields/Is_Indexed__c.field-meta.xml
<CustomField>
    <fullName>Is_Indexed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informational. Populated by Setup Wizard via Schema.DescribeFieldResult at config time. Used to warn admins about unindexed fields that may cause slow queries on large data volumes.</description>
    <label>Is Indexed</label>
    <type>Checkbox</type>
</CustomField>