force-app/code/objects/Routing_Condition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>SOQL operator for this condition. = and != are accepted for backward compatibility but internally converted to IN / NOT IN with a single-element list.</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
            <value>
                <fullName>EQUALS</fullName>
                <label>=</label>
            </value>
            <value>
                <fullName>NOT_EQUALS</fullName>
                <label>!=</label>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
                <label>&lt;</label>
            </value>
            <value>
                <fullName>GREATER_THAN</fullName>
                <label>&gt;</label>
            </value>
            <value>
                <fullName>LESS_OR_EQUAL</fullName>
                <label>&lt;=</label>
            </value>
            <value>
                <fullName>GREATER_OR_EQUAL</fullName>
                <label>&gt;=</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>