force-app/code/objects/Routing_Condition__mdt/fields/Routing_Config__c.field-meta.xml
<CustomField>
    <fullName>Routing_Config__c</fullName>
    <description>Parent Routing Config record. Links this condition to a specific routing scenario.</description>
    <label>Routing Config</label>
    <referenceTo>Routing_Config__mdt</referenceTo>
    <relationshipLabel>Routing Conditions</relationshipLabel>
    <relationshipName>Routing_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>