force-app/code/objects/Routing_Condition__mdt/fields/Value_Source__c.field-meta.xml
<CustomField>
    <fullName>Value_Source__c</fullName>
    <description>STATIC: value(s) from the Values__c field. USER_ATTRIBUTE: value(s) read at runtime from the agent User record field specified in User_Attribute_Field__c.</description>
    <label>Value Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STATIC</fullName>
                <default>true</default>
                <label>STATIC</label>
            </value>
            <value>
                <fullName>USER_ATTRIBUTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>