force-app/code/objects/Routing_Condition__mdt/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>Admin-entered values, always comma-delimited even for single values. Engine parses into List and binds via IN :bindList. Required when Value_Source__c is STATIC. e.g. New,Escalated</description>
    <label>Values</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>